# termvid

./: .gitignore  Cargo.toml  README.md
src/: display.rs  ffmpeg.rs  main.rs
test_tools/: wine.sh
