[package]
name = "termvid"
version = "0.3.2"
edition = "2021"
description = "CLI application to play a video in the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swz-git/termvid"

[profile.release]
lto = true
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
console = { version = "0.15.5", default-features = false, features = [
  "ansi-parsing",
] }
cpal = "0.15.0"
ctrlc = "3.2.5"
unix-named-pipe = "0.2.0"
uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }
which = "4.4.0"
y4m = "0.7.0"
yansi = "0.5.1"
